test/compile_errors/err_if_final_else_requires_body_marker.w
//! expect-error: expected ':' or '{' to introduce body

fn main:
    let score = 65
    let label =
        if score >= 90: "excellent"
        else if score >= 70: "ok"
        else "needs work"
    let _ = label
